--- a/app/views/vocabulary/_panel_display_partial.html.erb
+++ b/app/views/vocabulary/_panel_display_partial.html.erb
@@ -2,12 +2,17 @@
   panel_class ||= 'primary'
   title ||= ''
   values ||= []
+  rel_id ||= nil
 %>
 <% if values[0].present? %>
   <div class="card card-<%=panel_class%> mb-3 col-lg-6 col-md-8 col-sm-12">
 
   <div class="card-header text-bg-<%=panel_class%>">
+    <% if rel_id == 'identifier' %>
+    <a class="text-white" href="http://purl.org/dc/terms/identifier"><%= t("relations.identifier") %></a>
+    <% else %>
     <%= title.html_safe %>
+    <% end %>
   </div>
   <div class="card-body">
     <dl style="margin-bottom:0px">
